--- a/shellcommand/build.gradle
+++ b/shellcommand/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
 
@@ -22,12 +21,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-//    compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 }
 
 ext {
@@ -37,16 +35,16 @@ ext {
     publishedGroupId = 'com.zyhang'
     artifact = 'shellCommand'
 
-    siteUrl = 'https://github.com/yuhangjiayou/ShellCommand'
-    gitUrl = 'https://github.com/yuhangjiayou/ShellCommand.git'
+    siteUrl = 'https://github.com/izyhang/ShellCommand'
+    gitUrl = 'https://github.com/izyhang/ShellCommand.git'
 
-    libraryVersion = '1.0.0'
+    libraryVersion = '1.1.0'
     libraryName = 'shellCommand'
     libraryDescription = 'help run shell command in app'
 
     developerId = 'zyhang'
     developerName = 'zyhang'
-    developerEmail = 'zyhang4502@gmail.com'
+    developerEmail = 'izyhang@gmail.com'
 
     licenseName = 'The Apache Software License, Version 2.0'
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
